features: about + error créées, neet to fix : aniamtion des collapses, pour l'instant fonctionne en natif html, mais l'animation nécessite de passer par js, fonction collapse a créé.

--- a/my-react-app/src/styles/base/_reset.scss
+++ b/my-react-app/src/styles/base/_reset.scss
@@ -75,6 +75,10 @@ hr {
   border-top: 1px solid #ccc;
 }
 
+h1,h2,h3{
+  margin: 0;
+}
+
 :where([hidden]) {
   display: none !important;
 }
